# python-lessons

./: README.md  __init__.py  __main__.py  config.py  my_module.py  parse_xls.py  pyproject.toml
pypackage/: __main__.py  gui.py  parse_xls.py
sagemaker-helloworld/: basic_sagemaker_processing.ipynb  pyproject.toml
sagemaker-script-mode/: pyproject.toml  sagemaker-script-mode.ipynb
scikit_learn_data_processing_and_model_evaluation/: pyproject.toml  scikit_learn_data_processing_and_model_evaluation.ipynb
scikit_learn_data_processing_and_model_evaluation/code/: requirements.txt
select_file/: __init__.py
