[tool.poetry]
name = "fix-xls"
version = "0.1.0"
description = "Fix .xls files for Mister Silvio"
authors = ["tapyu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xlsxwriter = "^3.1.9"
xlrd = "^2.0.1"
xlwt = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
