[tool.poetry]
name = "pypackage"
version = "0.1.0"
description = "Fix .xls files for Mister Silvio"
authors = ["tapyu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xlrd = "^2.0.1"
xlwt = "^1.3.0"

[tool.poetry.scripts]
correcao = "pypackage.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
