[tool.poetry]
name = "sagemaker-helloworld"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sagemaker = "^2.204.0"
boto3 = "^1.34.26"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
ipykernel = "^6.29.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
