[tool.poetry]
name = "sagemaker-script-mode"
version = "0.1.0"
description = ""
authors = ["tapyu <rubem.engenharia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
boto3 = "^1.34.31"
pip = "^23.3.2"
ipykernel = "^6.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
