[tool.poetry]
name = "scikit-learn-data-processing-and-model-evaluation"
version = "0.1.0"
description = ""
authors = ["tapyu <rubem.engenharia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sagemaker = "^2.205.0"
boto3 = "^1.34.28"
ipykernel = "^6.29.0"
fsspec = "^2023.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
